@@ -298,6 +298,24 @@ main (int   argc,
 	}
       if (options.action == options::ACTION_CONFIG)
 	{
+	  std::cout << "# "
+		    << format(_("schroot configuration generated by %1% %2%"))
+	    % (options.dchroot_compat ? "dchroot" : "schroot")
+	    % VERSION
+		    << endl;
+#ifdef SBUILD_DCHROOT_COMPAT
+	  // Help text at head of new config.
+	  std::cout << "# " << endl
+		    << "# "
+		    << _("To allow users access to the chroots, add their groups to the groups keys.") << endl;
+	  std::cout << "# "
+		    << _("To allow passwordless root access, add their groups to the root-groups keys.") << endl;
+	  std::cout << "# "
+		    << format(_("Remove '%1%' to use the new configuration."))
+	    % DCHROOT_CONF
+		    << endl;
+#endif
+	    std::cout << endl;
 	  config->print_chroot_config(chroots, std::cout);
 	  exit (EXIT_SUCCESS);
 	}
