@@ -1,3 +1,8 @@
+2006-06-14  Roger Leigh  <rleigh@debian.org>
+
+	* schroot/schroot.cc (main): Output configuration file with a help
+	message in comments, to help migrating dchroot.conf.
+
 2006-06-13  Roger Leigh  <rleigh@debian.org>
 
 	* schroot/Makefile.am
